--- a/gameTest2.fxml
+++ b/gameTest2.fxml
@@ -4,13 +4,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Sphere?>
 
 <FlowPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gamedemo.gameDemoController">
    <children>
@@ -29,15 +26,11 @@
             <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#newGame" prefHeight="24.0" prefWidth="150.0" text="New Game" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <TextField fx:id="scoreTextField" alignment="CENTER" editable="false" focusTraversable="false" prefHeight="47.0" prefWidth="150.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
             <TextField fx:id="statusTextField" editable="false" focusTraversable="false" prefHeight="47.0" prefWidth="150.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
-            <ToggleButton fx:id="easyToggleButton" focusTraversable="false" mnemonicParsing="false" text="Easy" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-               <toggleGroup>
-                  <ToggleGroup fx:id="difficulty" />
-               </toggleGroup>
-            </ToggleButton>
-            <ToggleButton fx:id="mediumToggleButton" focusTraversable="false" mnemonicParsing="false" text="Medium" toggleGroup="$difficulty" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-            <ToggleButton fx:id="hardToggleButton" focusTraversable="false" mnemonicParsing="false" text="Hard" toggleGroup="$difficulty" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <ToggleButton fx:id="volcanicToggleButton" focusTraversable="false" mnemonicParsing="false" text="Volcanic" toggleGroup="$difficulty" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
             <Label text="Score:" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#leftButtonClicked" text="Left" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#rightButtonClicked" text="Right" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#upButtonClicked" text="Up" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" onAction="#downButtonClicked" text="Down" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <GridPane fx:id="squareGrid" alignment="BOTTOM_CENTER" prefHeight="324.0" prefWidth="601.0">
@@ -67,9 +60,6 @@
          <FlowPane.margin>
             <Insets />
          </FlowPane.margin>
-         <children>
-            <Sphere fx:id="player" radius="25.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-         </children>
       </GridPane>
    </children>
 </FlowPane>
